{
    "name": "DefualtInput",
    "maps": [
        {
            "name": "Rocket",
            "id": "ab9a938a-bdb0-4a61-bce0-00347efec283",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "9010eab1-6963-4b40-a13d-db5e56a6324a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "fe13e477-35b6-4f84-89d9-4d70bb4cf6fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "63d6c108-a13b-4358-9e11-9c25f7ed4acd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "ffda27b6-cf6b-43e5-a7c6-b820bda1590c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dcf25e0f-6125-4481-a905-733a096e4ca4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bc85b819-27a9-4814-be8e-4b79dbabb217",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}